# JavachipCpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
api/: CMakeLists.txt
api/include/: ISwitchable.h
api/include/DynamicLoader/: IDynamicLoaderPlatform.h
api/include/SerialPort/: ISerialPort.h
cmake/: JavaChipCppConfig.cmake.in
core/: CMakeLists.txt
core/include/DynamicLoader/: DynamicLoader.h  DynamicLoaderPlatform.h
core/include/Logger/: FileLogger.h  LoggerBase.h
core/include/SerialPort/: AsioSerialPort.h
core/include/StringUtil/: StringUtil.h
core/lib/: asio.cmake
core/src/DynamicLoader/: DynamicLoader.cpp
core/src/Logger/: LoggerBase.cpp
core/src/SerialPort/: AsioSerialPort.cpp
core/src/StringUtil/: StringUtil.cpp
core/test/: CMakeLists.txt
core/test/src/: main.cpp
core/test/src/DynamicLoader/: DynamicLoaderTest.cpp
core/test/src/Logger/: BasicLoggerTest.cpp
doc/: Dockerfile  d.tree  labels.list  redirection-rules.xml
doc/topics/: BaseLogger.md  ConsoleLogger.md  FileLogger.md  GetCurrentTimeString.md  ILogger.md  Writerside-BaseLogger.md  starter-topic.md
include/: IRelay.h
include/DynamicLoader/: DynamicLoader.h  DynamicLoaderPlatform.h
include/Logger/: ConsoleLogger.h  ILogger.h  LoggerBase.h
include/Observer/: IListener.h  IObservable.h
include/Serializable/: ISerializable.h  SerializableUtils.h
include/StringUtil/: StringUtil.h
src/DynamicLoader/: DynamicLoaderPlatform.cpp
src/Logger/: ConsoleLogger.cpp  FileLogger.cpp  LoggerBase.cpp
src/StringUtil/: StringUtil.cpp
test/: CMakeLists.txt
test/src/DynamicLoader/: DynamicLoaderRealDllTest.cpp
test/src/Logger/: BasicLoggerTest.cpp  LoggerTest.cpp
test/src/Serializable/: SerializableTest.cpp
test/src/StringUtil/: StringUtilTest.cpp
